--- a/src/main/res/layout-land/activity_splash.xml
+++ b/src/main/res/layout-land/activity_splash.xml
@@ -5,16 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/material_background_small">
-
-    <ImageView
-        android:id="@+id/splash"
-        android:background="@mipmap/ic_launcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        tools:ignore="ContentDescription"/>
+    android:background="@drawable/material_background_land">
 
     <TextView
         android:text="@string/app_name"
@@ -30,6 +21,15 @@
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/textView2" />
 
+    <ImageView
+        android:id="@+id/splash"
+        android:background="@mipmap/ic_launcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="ContentDescription"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:text="@string/versionName"
         android:layout_width="wrap_content"
@@ -38,9 +38,10 @@
         android:textSize="14sp"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="69dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
