--- a/src/main/res/layout/main_coordinator.xml
+++ b/src/main/res/layout/main_coordinator.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                  android:layout_width="match_parent"
-                                                  android:layout_height="match_parent"
-    android:id="@+id/coordinator">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:id="@+id/coordinator">
 
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
@@ -35,4 +35,9 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"/>
+
+
+<include
+    layout="@layout/info_tab"/>
+
 </android.support.design.widget.CoordinatorLayout>
