--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -6,7 +6,9 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="105"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/action_feedback"
@@ -25,6 +27,6 @@
         android:icon="@drawable/remove"
         tools:ignore="AppCompatResource"
         android:titleCondensed="@string/vymazatZnamky"
-        app:showAsAction="ifRoom|withText" />
+        app:showAsAction="always|withText" />
 
 </menu>
