--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,8 +6,16 @@
     <color name="ffMark">#ffae00</color>
     <color name="neutralMark">?attr/android:textColorTertiary</color>
     <color name="tableGrey">#ffffb3</color>
+    <color name="slide1">#ffae22</color>
+    <color name="but1">#003cff</color>
+    <color name="slide2">#00bfff</color>
+    <color name="but2">#ffae22</color>
+    <color name="slide3">#e67c19</color>
+    <color name="but3">#d9ff00</color>
+    <color name="slide4">#00dc07</color>
+    <color name="but4">#00bfff</color>
 
-    <!-- BASE COLORS -->
+    <!-- BASE Theme -->
     <color name="colorPrimary">#ffae22</color>
     <color name="colorPrimaryDark">#e67c19</color>
     <color name="colorAccent">#00bfff</color>
