--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -7,6 +7,17 @@
                 xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_toEndOf="@+id/scrollView2"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/space2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <LinearLayout
         android:layout_height="35dp"
         android:layout_width="500dp"
@@ -60,7 +71,8 @@
         android:dividerHeight="1px"
         android:layout_below="@+id/linearl2"
         android:layout_toRightOf="@+id/image1"
-        android:layout_toEndOf="@+id/image1" />
+        android:layout_toEndOf="@+id/image1"
+        android:layout_above="@+id/space2" />
 
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -84,7 +96,9 @@
         android:layout_alignParentStart="true"
         android:layout_width="fill_parent"
         android:layout_toLeftOf="@+id/image1"
-        android:layout_toStartOf="@+id/image1">
+        android:layout_toStartOf="@+id/image1"
+        android:id="@+id/scrollView2"
+        android:layout_above="@+id/space2">
 
         <RelativeLayout
             android:layout_width="fill_parent"
