--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_toEndOf="@+id/scrollView2"
         android:layout_alignParentBottom="true"
         android:id="@+id/space2"
         android:layout_alignParentLeft="true"
@@ -119,9 +118,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:gravity="center_vertical|center">
-                <requestFocus />
-            </AutoCompleteTextView>
+                android:gravity="center_vertical|center"></AutoCompleteTextView>
 
             <View android:id="@+id/fakeView"
                   android:layout_width="0dp"
