--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -17,31 +17,58 @@
         tools:ignore="ContentDescription"/>
 
     <TextView
-        android:text="@string/app_name"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
+        android:layout_above="@+id/textView2"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/textView2" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@android:color/black"
+        android:textSize="25sp" />
 
     <TextView
-        android:text="@string/versionName"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:textSize="14sp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:text="@string/versionName"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:layout_centerVertical="true"
+        android:textSize="17sp" />
+
+    <ProgressBar
+        android:id="@+id/pbSplash"
+        style="@style/ProgressBarSplash"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/tvSplashInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:text="∙∙∙"
+        android:textColor="@color/tableGrey"
+        android:textSize="70sp"
+        tools:ignore="HardcodedText" />
 
 </RelativeLayout>
