--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -31,5 +31,5 @@
     <!-- BLACK THEME -->
     <color name="colorPrimaryBT">#00dc07</color>
     <color name="colorPrimaryDarkBT">#00a000</color>
-    <color name="colorAccentBT">#f00</color>
+    <color name="colorAccentBT">#ff0000</color>
 </resources>
