--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:id="@+id/activity_main"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <LinearLayout
@@ -60,6 +59,7 @@
         android:hint="@string/hintET"
         android:imeOptions="actionNext"
         android:inputType="text"
+        android:nextFocusForward="@id/etMark"
         android:maxLength="25"
         android:textSize="16sp">
 
@@ -69,15 +69,14 @@
         android:id="@+id/etMark"
         android:layout_width="80dp"
         android:layout_height="40dp"
-        android:layout_alignBaseline="@+id/etName"
-        android:layout_alignBottom="@+id/etName"
+        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/etWeight"
         android:layout_toStartOf="@+id/etWeight"
         android:hint="@string/mark"
         android:imeOptions="actionNext"
         android:inputType="numberDecimal"
         android:maxLength="3"
-        android:nextFocusLeft="@id/etName"
+        android:nextFocusForward="@id/etWeight"
         android:textAlignment="center"
         android:textSize="16sp" />
 
@@ -92,7 +91,6 @@
         android:imeOptions="actionDone"
         android:inputType="number"
         android:maxLength="3"
-        android:nextFocusLeft="@id/etMark"
         android:textAlignment="center"
         android:textSize="16sp" />
 
