--- a/src/main/res/layout/activity_overview.xml
+++ b/src/main/res/layout/activity_overview.xml
@@ -15,8 +15,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rl3">
+            android:layout_height="wrap_content">
 
             <View android:id="@+id/fakeView"
                   android:layout_width="0dp"
