--- a/src/main/res/layout/changelog.xml
+++ b/src/main/res/layout/changelog.xml
@@ -14,8 +14,7 @@
         <TextView
             android:text="@string/welcome_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
 </RelativeLayout>
