--- a/src/main/res/layout/info_tab.xml
+++ b/src/main/res/layout/info_tab.xml
@@ -28,7 +28,6 @@
             android:background="?attr/colorPrimary">
 
             <TextView
-                android:id="@+id/tvMarkCountTemplate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@+id/fakeView3"
@@ -51,7 +50,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:gravity="left|center"
-                android:text="0"
+                android:text="NULL"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_toRightOf="@+id/fakeView3"
@@ -73,7 +72,6 @@
             android:background="?attr/colorPrimary">
 
             <TextView
-                android:id="@+id/tvAverageTemplate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -98,7 +96,7 @@
                 android:layout_toEndOf="@+id/fakeView2"
                 android:layout_toRightOf="@+id/fakeView2"
                 android:gravity="left|center"
-                android:text="0,0"
+                android:text="SYNTAX ERROR"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -109,7 +107,6 @@
                 android:layout_centerInParent="true" />
 
             <ImageView
-                android:id="@+id/imageView"
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
